@@ -27,9 +27,12 @@ dist-hook:
 # sed.html dependant on sed.texi and all the included
 # sources
 if MAKEINFO_HTML
+docdir = $(datadir)/doc
+doc_DATA = sed.html
+
 sed.html: sed.texi sed.info
-	cd $(srcdir) \
-	  && $(MAKEINFO) --html `echo $< | sed 's,.*/,,'`
+	builddir=`pwd` && cd $(srcdir) && \
+	  $(MAKEINFO) --html --no-split -o $$builddir/sed.html sed.texi
 
 html: sed.html
 
@@ -38,9 +41,13 @@ endif
 
 # These rules are used together with TEXI2HTML
 if TEXI2HTML_HTML
+docdir = $(datadir)/doc
+doc_DATA = sed.html
+
 sed.html: sed.texi sed.info
-	cd $(srcdir) \
-	  && $(TEXI2HTML) `echo $< | sed 's,.*/,,'`
+	cp $(srcdir)/*.texi . && \
+	  $(TEXI2HTML) sed.texi && \
+	  rn *.texi
 
 html: sed.html
 
